--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
           trivy fs .
       - name: Docker build and push
         run: |
-          docker build --build-arg TMDB_V3_API_KEY=<9f1677dd935a400624e974bfc1f67223> -t netflix .
+          docker build --build-arg TMDB_V3_API_KEY=9f1677dd935a400624e974bfc1f67223 -t netflix .
           docker tag netflix venkyroyal/netflix:latest
           docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
           docker push venkyroyal/netflix:latest
