--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,4 +33,14 @@ jobs:
           docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
           docker push venkyroyal/netflix:latest
         env:
-          DOCKER_CLI_ACI: 1   
+          DOCKER_CLI_ACI: 1 
+  deploy:
+    needs: build-analyze-scan
+    runs-on: [aws-netflix]
+    steps:
+      - name: Pull the docker image
+        run: docker pull venkyroyal/netflix:latest
+      - name: Trivy image scan
+        run: trivy image venkyroyal/netflix:latest
+      - name: Run the container netflix
+        run: docker run -d --name netflix -p 8081:80 venkyroyal/netflix:latest     
