--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,36 +1,48 @@
-name: Build
-
+name: Build,Analyze,scan
 on:
   push:
     branches:
       - main
-
-
 jobs:
-  build:
+  build-analyze-scan:
     name: Build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - uses: sonarsource/sonarqube-scan-action@master
+      - name: Build and analyze with SonarQube
+        uses: sonarsource/sonarqube-scan-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
       - name: install trivy
         run: |
+           #install trivy
            sudo apt-get install wget apt-transport-https gnupg lsb-release -y
            wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | gpg --dearmor | sudo tee /usr/share/keyrings/trivy.gpg > /dev/null
            echo "deb [signed-by=/usr/share/keyrings/trivy.gpg] https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main" | sudo tee -a /etc/apt/sources.list.d/trivy.list
            sudo apt-get update
            sudo apt-get install trivy -y
+           #scanning files
            trivy fs .
       - name: Docker build and push
         run: |
+          #run commands to build and push docker images
           docker build --build-arg TMDB_V3_API_KEY=9f1677dd935a400624e974bfc1f67223 -t netflix .
           docker tag netflix venkyroyal/netflix:latest
           docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
           docker push venkyroyal/netflix:latest
         env:
-          DOCKER_CLI_ACI: 1     
+          DOCKER_CLI_ACI: 1
+  deploy:
+    needs: build-analyze-scan
+    runs-on: [aws-netflix]
+    steps:
+      - name: Pull the docker image
+        run: docker pull venkyroyal/netflix:latest
+      - name: Trivy image scan
+        run: trivy image venkyroyal/netflix:latest
+      - name: Run the container netflix
+        run: docker run -d --name netflix -p 8081:80 venkyroyal/netflix:latest
