--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
           DOCKER_CLI_ACI: 1
   deploy:
     needs: build-analyze-scan
-    runs-on: [aws-netflix]
+    runs-on: []
     steps:
       - name: Pull the docker image
         run: docker pull venkyroyal/netflix:latest
