--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Docker build and push
         run: |
           #run commands to build and push docker images
-          docker build --build-arg TMDB_V3_API_KEY=9f1677dd935a400624e974bfc1f67223 -t netflix .
+          docker build --build-arg TMDB_V3_API_KEY= -t netflix .
           docker tag netflix venkyroyal/netflix:latest
           docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
           docker push venkyroyal/netflix:latest
@@ -38,7 +38,7 @@ jobs:
           DOCKER_CLI_ACI: 1
   deploy:
     needs: build-analyze-scan
-    runs-on: []
+    runs-on: [venkymaluma]
     steps:
       - name: Pull the docker image
         run: docker pull venkyroyal/netflix:latest
