--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Docker build and push
         run: |
           #run commands to build and push docker images
-          docker build --build-arg TMDB_V3_API_KEY= -t netflix .
+          docker build --build-arg TMDB_V3_API_KEY=466bd55e8be4f41772ccdd2d768fa69c -t netflix .
           docker tag netflix venkyroyal/netflix:latest
           docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
           docker push venkyroyal/netflix:latest
